Enhance UI components and improve layout for dashboard and login views